exports[`<Sidebar /> renders children correctly 1`] = `
<aside
  className="MmKeu">
  <section
    className="hZXMYD"
    name="sidebar-wrapper">
    <span
      collapse={false}>
      Child
    </span>
  </section>
</aside>
`;

exports[`<Sidebar /> renders correctly with collapsed option 1`] = `
<aside
  className="isrQCO">
  <section
    className="hZXMYD"
    name="sidebar-wrapper" />
</aside>
`;

exports[`<Sidebar /> renders correctly with default options 1`] = `
<aside
  className="MmKeu">
  <section
    className="hZXMYD"
    name="sidebar-wrapper" />
</aside>
`;

exports[`<Sidebar /> renders correctly with fixed and collapsed options 1`] = `
<aside
  className="hPSzSq">
  <section
    className="hZXMYD"
    name="sidebar-wrapper" />
</aside>
`;

exports[`<Sidebar /> renders correctly with fixed option 1`] = `
<aside
  className="gyIrIH">
  <section
    className="hZXMYD"
    name="sidebar-wrapper" />
</aside>
`;

exports[`<Sidebar /> renders correctly with mini and collapsed options 1`] = `
<aside
  className="kHCXGh">
  <section
    className="hZXMYD"
    name="sidebar-wrapper" />
</aside>
`;

exports[`<Sidebar /> renders correctly with mini and fixed options 1`] = `
<aside
  className="gyIrIH">
  <section
    className="hZXMYD"
    name="sidebar-wrapper" />
</aside>
`;

exports[`<Sidebar /> renders correctly with mini option 1`] = `
<aside
  className="MmKeu">
  <section
    className="hZXMYD"
    name="sidebar-wrapper" />
</aside>
`;

exports[`<Sidebar /> renders correctly with mini, fixed, and collapsed options 1`] = `
<aside
  className="hbjQrz">
  <section
    className="hZXMYD"
    name="sidebar-wrapper" />
</aside>
`;

exports[`<Sidebar /> renders correctly with theme 1`] = `
<aside
  className="dDcugc">
  <section
    className="hZXMYD"
    name="sidebar-wrapper" />
</aside>
`;
